<resources>
    <string name="app_name">Hello: Rabenau-Allendorf</string>
    <string name="hello_world">Hello world!</string>
    <string name="emergency">Emergency</string>
    <string name="title_activity_settings">Settings</string>

    <string name="mapbox_token">pk.eyJ1IjoibWtheTg5IiwiYSI6ImNpdG92MDM0YjAwMWIyem55dmd0Mms0eGIifQ.ZIZ0Cq_lzvB6yMDjK-XOdQ</string>

    <string-array name="cities">
        <item>Allendorf Lumda</item>
        <item>Allertshausen</item>
        <item>Climbach</item>
        <item>@string/geilshausen</item>
        <item>@string/kesselbach</item>
        <item>@string/londorf</item>
        <item>Nordeck</item>
        <item>Odenhausen</item>
        <item>@string/rüddingshausen</item>
        <item>Winnen</item>
    </string-array>

    <string-array name="places">
        <item>@string/places_cat_clothes</item>
        <item>@string/places_cat_education</item>
        <item>@string/places_cat_food</item>
        <item>@string/places_cat_pharmacies</item>
        <item>@string/places_cat_playgrounds</item>
        <item>@string/places_cat_sports</item>
        <item>@string/places_cat_www</item>
        <item>Unterkünfte</item>
        <item>Friseure</item>
        <item>Gotteshäuser</item>
        <item>Post</item>
        <item>Haltestellen</item>
        <item>Finanzen</item>
        <item>Gesellschaftsräume</item>
        <item>Bürokratie</item>
    </string-array>

    <string name="hometown">Hometown</string>
    <string name="geilshausen" translatable="false">Geilshausen</string>
    <string name="londorf" translatable="false">Londorf</string>
    <string name="rüddingshausen" translatable="false">Rüddingshausen</string>
    <string name="kesselbach" translatable="false">Kesselbach</string>

    <string name="ambulance">Ambulance</string>
    <string name="fire_accident">Fire / Accident</string>
    <string name="violence_crime">Police</string>
    <string name="btn_informationen">Useful Information</string>
    <string name="title_activity_doctors">Doctors</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="error_read_json">Error: Unable to read data</string>
    <string name="title_activity_places">Places</string>
    <string name="title_activity_public_transport">Public transport</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="places_cat_food">Food</string>
    <string name="places_cat_clothes">Clothes</string>
    <string name="places_cat_pharmacies">Pharmacies</string>
    <string name="places_cat_education">Education</string>
    <string name="places_cat_sports">Sports</string>
    <string name="places_cat_playgrounds">Playgrounds</string>
    <string name="places_cat_www">Free Internet</string>
    <string name="label_address">Address</string>
    <string name="label_openhours">Opening hours</string>
    <string name="label_spokenlangs">Spoken languages</string>
    <string name="closed">Closed</string>
    <string name="label_contact">Contact</string>
    <string name="closed_holiday">Closed (holiday)</string>
    <string name="title_activity_places_details">PlacesDetailsActivity</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="title_activity_disclaimer">Disclaimer</string>
    <string name="title_activity_contact">Contact</string>

</resources>
